--- a/css/main.css
+++ b/css/main.css
@@ -518,7 +518,7 @@ input {
 	font-size: 0.8em;
 }
 
-.small-item2 {
+.price-subtotal {
 	margin-left: 8em;
 	text-align: right;
 }
